# web_bank

./: .gitignore  README.md  docker-compose.yaml  template.env
back_end/: Cargo.toml  Dockerfile
front_end/: Cargo.toml  Dockerfile
nginx/: Dockerfile  nginx.conf
postgres/: .gitignore  Dockerfile
services/front_end/: Cargo.toml  Dockerfile
services/front_end/html/: index.html  login.html  register.html  transfer.html
services/front_end/src/: main.rs
services/login/: Cargo.toml  Dockerfile
services/register/: Cargo.toml  Dockerfile
services/transfer/: Cargo.toml  Dockerfile
styles/: style.css
