[package]
name = "front_end"
version = "0.1.0"
edition = "2021"

[dependencies]
num_cpus = "1.16.0"
anyhow = "1.0.86"

tokio = { version = "1.39.2", features = ["full"] }
ntex = { version = "2.1.0", features = ["tokio", "rustls"] }

rustls = "0.23.12"
rustls-pemfile = "2.1.3"

rdkafka = { version = "0.36.2", features = ["cmake-build"] }
